<resources>
    <string name="app_name">Roshambo</string>
    <string name="winnertext">Roshambo</string>
    <string name="paperbutton">paperbutton</string>
    <string name="comp">comp</string>
    <string name="rockbutton">rockbutton</string>
    <string name="scissorbutton">scissorbutton</string>
    <string name="player">player</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="draw">DRAW</string>
</resources>
